--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,16 +20,21 @@
         "Cardizem",
         "Ceftin",
         "Chlorhexidine",
+        "Ciprofloxacin",
         "clofazimine",
         "Crohn's",
         "Cubicin",
         "danzen",
         "dapsone",
+        "doxium",
+        "Dysmenorrhea",
         "epival",
         "Fiasp",
         "Fibromyalgia",
         "Flomax",
+        "Galzin",
         "glulisine",
+        "hemokit",
         "Humalog",
         "Kozenis",
         "Krintafel",
@@ -37,6 +42,7 @@
         "lamnet",
         "Lisinopril",
         "lispro",
+        "Loratadine",
         "lotrix",
         "Lyumjev",
         "Maxalt",
